--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 autopep8==2.0.1
 click==8.1.3
+colormap==1.0.4
+convcolors==2.2.0
+extcolors==1.0.0
 Flask==2.2.3
 Flask-Cors==3.0.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+Pillow==9.4.0
 pycodestyle==2.10.0
 six==1.16.0
 tomli==2.0.1
