--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
