--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.10",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
