--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "vue": "^2.5.2",
+    "vue-resource": "^1.5.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.2"
   },
