--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-autopep8==2.0.1
+autopep8==2.0.2
+blinker==1.6.2
 click==8.1.3
 colorama==0.4.6
 colorlog==6.7.0
@@ -6,19 +7,19 @@ colormap==1.0.4
 convcolors==2.2.0
 easydev==0.12.1
 extcolors==1.0.0
-Flask==2.2.3
+Flask==2.3.2
 Flask-Cors==3.0.10
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
-numpy==1.24.2
-pandas==1.5.3
+numpy==1.24.3
+pandas==2.0.1
 pexpect==4.8.0
-Pillow==9.4.0
+Pillow==9.5.0
 ptyprocess==0.7.0
 pycodestyle==2.10.0
 python-dateutil==2.8.2
-pytz==2022.7.1
+pytz==2023.3
 six==1.16.0
-tomli==2.0.1
-Werkzeug==2.2.3
+tzdata==2023.3
+Werkzeug==2.3.3
